tests/sources/invalid/classes/new_missing_paren.fire
// Parser error: 'new ClassName' constructor call missing the argument
// list parentheses.

class Widget {
    id: int32;

    fn Widget(id: int32) {
        this.id = id;
    }
}

fn new_missing_paren() -> void {
    w: Widget = new Widget;  //~ ERROR FS-PARSE-0010 @27
//~^ ERROR FS-PARSE-0010 @27
}
